--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
+    "formik": "^2.2.9",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-native": "0.71.4",
+    "react-native-element-dropdown": "^2.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-radio-buttons-group": "^2.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
