--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/stack": "^6.3.16",
     "bootstrap": "^5.2.3",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
@@ -18,7 +19,8 @@
     "react-native-element-dropdown": "^2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-material-dropdown": "^0.11.1",
-    "react-native-radio-buttons-group": "^2.3.2"
+    "react-native-radio-buttons-group": "^2.3.2",
+    "react-native-gesture-handler": "~2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
