--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-element-dropdown": "^2.9.0",
+    "react-native-form-validator": "^0.5.1",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-radio-buttons-group": "^2.3.2",
-    "react-native-gesture-handler": "~2.9.0"
+    "expo-image-picker": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
