--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/stack": "^6.3.16",
     "bootstrap": "^5.2.3",
     "expo": "~48.0.9",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.2.9",
     "react": "18.2.0",
@@ -22,7 +23,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-radio-buttons-group": "^2.3.2",
-    "expo-image-picker": "~14.1.1"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
